--- a/sample.yml
+++ b/sample.yml
@@ -6,3 +6,9 @@
      ansible.builtin.yum:
         name: nginx
         state: latest
+
+- name: Start nginx
+  ansible.builtin.service:
+     name: nginx
+     state: started
+     enabled: yes
