--- a/frontend.yml
+++ b/frontend.yml
@@ -15,7 +15,7 @@
 
     - name: Remove file
       ansible.builtin.file:
-        path: /usr/share/nginx/html/
+        path: /usr/share/nginx/html*
         state: absent
 
     - name: Unzip and download
