--- a/frontend.yml
+++ b/frontend.yml
@@ -21,7 +21,7 @@
     - name: Unzip and download
       ansible.builtin.unarchive:
         src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
-        dest: /usr/share/nginx/html/
+        dest: /usr/share/nginx/html
         remote_src: yes
 
     - name: Copying service file
