--- a/mongodb.yml
+++ b/mongodb.yml
@@ -5,7 +5,7 @@
     - name: Copying service file
       ansible.builtin.copy:
         src: mongo.repo
-        dest: /etc/yum.repos.repo/mongo.repo
+        dest: /etc/yum.repos.d/mongo.repo
 
     - name: installing mongodb
       ansible.builtin.yum:
