--- a/catalogue.yml
+++ b/catalogue.yml
@@ -47,10 +47,10 @@
         src: mongo.repo
         dest: /etc/yum.repos.d/mongo.repo
 
-    - name: installing nginx
+    - name: installing mongod
       ansible.builtin.yum:
-        name: mongod-org-shell
+        name: mongodb-org-shell
         state: latest
 
-    - name: schemo loading
+    - name: schema loading
       ansible.builtin.shell: mongo --host mongodb-dev.cloudev7.online </app/schema/catalogue.js
