--- a/redis.yml
+++ b/redis.yml
@@ -5,7 +5,7 @@
     - name: Install the latest version of Apache
       ansible.builtin.yum:
         name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm -y
-        state: latest
+        state: installed
 
     - name: downloading nodejs repo
       ansible.builtin.shell: yum module enable redis:remi-6.2 -y
