--- a/redis.yml
+++ b/redis.yml
@@ -6,11 +6,12 @@
       ansible.builtin.yum:
         name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
         state: installed
+        disable_gpg_check: true
 
     - name: downloading nodejs repo
       ansible.builtin.shell: yum module enable redis:remi-6.2 -y
 
-    - name: installing nodejs
+    - name: installing redis
       ansible.builtin.yum:
         name: redis
         state: latest
