--- a/nginx.conf
+++ b/nginx.conf
@@ -5,8 +5,8 @@ location /images/ {
   try_files $uri /images/placeholder.jpg;
 }
 location /api/catalogue/ { proxy_pass http://catalogue-dev.cloudev7.online:8080/; }
-location /api/user/ { proxy_pass http://localhost:8080/; }
-location /api/cart/ { proxy_pass http://localhost:8080/; }
+location /api/user/ { proxy_pass http://user-dev.cloudev7.online:8080/; }
+location /api/cart/ { proxy_pass http://cart-dev.cloudev7.online:8080/; }
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
