--- a/shipping.yml
+++ b/shipping.yml
@@ -23,15 +23,11 @@
         dest: /app
         remote_src: yes
 
-    - name: downloading nodejs repo
-      ansible.builtin.shell: mvn clean package
+
+    - name: download maven  dependencies
+      ansible.builtin.shell: mvn clean package ; mv target/shipping-1.0.jar shipping.jar
       args:
         chdir: /app
-
-    - name: Copying service file
-      ansible.builtin.move:
-        src: target/shipping-1.0.jar
-        dest: shipping.jar
 
     - name: Restart service shipping,
       ansible.builtin.service:
