--- a/shipping.service
+++ b/shipping.service
@@ -3,7 +3,7 @@ Description=Shipping Service
 
 [Service]
 User=roboshop
-Environment=CART_ENDPOINT=cart-dev.cloudevv7.online:8080
+Environment=CART_ENDPOINT=cart-dev.cloudev7.online:8080
 Environment=DB_HOST=mysql-dev.cloudev7.online
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
