--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,4 +1,4 @@
 - name: importing task
   ansible.builtin.import_role:
        name: common
-       tasks_from: nodejs.yml
+       tasks_from: nodejs
