--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -28,6 +28,7 @@
   ansible.builtin.service:
     name: nginx
     state: started
+    enabled: yes
 
 - name: Restart service nginx, in all cases
   ansible.builtin.service:
